[package]
name = "complexity-radar"
version = "0.1.0"
authors = ["Juan Gomez <atilag@gmail.com>"]
edition = "2021"

[[bin]]
name = "cxradar"
path = "src/main.rs"

[lib]
name = "complexity_radar"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
clap = { version = "4.1.4", features = ["derive"]}
env_logger = "0.10.0"
futures = "0.3.25"
itertools = "0.10.5"
octocrab = { path="../octocrab" }
regex = "1.7.1"
tempfile = "3.3.0"
tokio =  {version = "1.24", features = ["full"]}
tokio-test = "0.4.2"
