[package]
name = "complexity-radar"
version = "0.1.0"
authors = ["Juan Gomez <atilag@gmail.com>"]
descrption = "Command line tool that shows you what are the most changed files in a Github repositiry and calculate their complexity using different techniques"
repository = "https://github.com/atilag/complexity-radar"
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "complexity-radar"
path = "src/main.rs"

[lib]
name = "complexity_radar"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.61"
chrono = "0.4.24"
clap = { version = "4.1.4", features = ["derive"]}
env_logger = "0.10.0"
futures = "0.3.25"
futures-util = "0.3.28"
http = "0.2.9"
itertools = "0.10.5"
octocrab = { version = "0.21.0", features=["stream"] }
regex = "1.7.1"
syn = { version = "1.0.109", default-features=false, features=["parsing", "full", "extra-traits"]}
tempfile = "3.3.0"
thiserror = "1.0.40"
tokio =  {version = "1.24", features = ["full"]}
tokio-test = "0.4.2"

[dev-dependencies]
serde = "1.0.163"
serde_json = "1.0.96"
wiremock = "0.5.18"
